# cheerio-flow

./: .gitignore  LICENSE  README.md  README_CN.md  REVIEW-LOG.md  index.html  package.json  pnpm-lock.yaml  v0.1.2-before-deepseek-css-fix.patch  vite.config.ts
docs/: DATA_RELIABILITY_ROADMAP.md  IDEAS_DUAL_PLANE_LOCAL_DATA_MODEL.md  MANUAL_TEST_LOG_v0.1.7.md  MANUAL_TEST_REPORT_v0.1.5_GROUP_FOLDER_MIGRATION.md  RELEASE_NOTES_v0.1.7.md  V0.1.6_ATOMIC_SAVE_STORAGE_CONSOLE_PLAN.md  V0.1.6_MANUAL_DESKTOP_SMOKE_TEST_REPORT.md  V0.1.7_SNAPSHOT_MANIFEST_CHECKSUM_PLAN.md  VALIDATION_v0.1.7.md
src/: App.tsx  integrity.ts  main.tsx  storage.ts  storageOperationLog.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
