[package]
name = "cheerio-flow"
version = "0.1.0"
description = "Cheerio Flow desktop research workflow planner"
authors = ["Cheerio Flow"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "cheerio_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
